Fix lists and menu on mobile

--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -35,6 +35,7 @@ $gisto-color-red: tomato;
   .nav-column {
     text-align: center;
     display: none;
+    margin: 10px 0px 0px 0px;
   }
   .nav-link {
     width: 99%;
@@ -484,6 +485,7 @@ ul {
 
 .icons-ul {
   margin-left: 0 !important;
+  text-align: left;
   & i {
     color: $gisto-color-red;
   }
